# spotwise-demo

./: .gitattributes  .gitignore  AzuriteConfig  PROJECT_STRUCTURE.md  README.md  __azurite_db_table__.json  develop_log.txt  index.html  package-lock.json  package.json  project_structure.md  requirements.txt  tailwind.config.ts
backend/: .env  README.md  pyproject.toml  requirements.txt  setup.cfg  test_events.py
backend/app/: business_requirements.py  database.py  fetch_tampere_roads.py  main.py  models.py  tampere_roads.json
backend/app/engine/: calculate_score.py  (+1 more)
backend/data/: EventListOneSampleResponse.json  aggregated_locations.json  fmiopendata_output.json
backend/event_ranking_output/: event_ranking_mvp.json
backend/mock_data/: LOC001_audience_interests.json  LOC001_events.json  LOC001_events_with_venues.json  LOC001_poi.json  LOC002_company_finances.json  LOC002_events_with_venues.json  LOC002_poi.json  LOC003_events.json  LOC003_events_with_venues.json  LOC003_poi.json  LOC004_events.json  LOC004_events_with_venues.json  LOC004_poi.json  LOC005_events_with_venues.json  LOC005_poi.json  LOC006_company_finances.json  LOC006_events.json  LOC006_events_with_venues.json  LOC006_poi.json  LOC007_events_with_venues.json  LOC007_poi.json  LOC008_company_finances.json  LOC008_events.json  LOC008_events_with_venues.json  LOC008_poi.json  LOC009_company_finances.json  LOC009_events.json  LOC009_events_with_venues.json  LOC010_events.json  LOC010_events_with_venues.json  LOC010_poi.json  consolidated_events.json  demographics-2.json  locations_data.json
(+133 files in other folders)
